challenges/straw-clutcher/challenge/src/StrawClutcher.c
/* Generated by re2c 1.1.1 on Sat Mar  2 22:12:35 2019 */
#line 1 "StrawClutcher.re"
#include <stdlib.h>
#include <unistd.h>
#include <string.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdbool.h>
#include <sys/queue.h>
#include <err.h>
#include <sys/mman.h>
#include <errno.h>

char *g_Username, *g_ClientID;
bool g_LoggedIn;

#define FILENAMESIZE 40

struct filedata {
	char filename[FILENAMESIZE];
	long length;
	unsigned char *data;
	int mmap;

	SLIST_ENTRY(filedata) entries;
};

SLIST_HEAD(slisthead, filedata) head = 
	SLIST_HEAD_INITIALIZER(head);



static bool filename_exists(char *filename)
{
	struct filedata *fdp;

	SLIST_FOREACH(fdp, &head, entries) {
		if(strcmp(fdp->filename, filename) == 0) {
			return true;
		}
	}

	return false;
}

static bool get_data_small(struct filedata *fdp)
{
	unsigned char data[fdp->length];
	unsigned long max, cnt, tmp, sz, remainder;

	max = fdp->length;

	for(cnt = 0, tmp = 0; cnt < max;) {
		remainder = fdp->length - cnt;
		sz = 64;

		if(remainder > 4096) {
			sz = 4096;
		} else {
			sz = remainder;
		}

		// printf("sz is %ld\n", sz);

		tmp = fread(data + cnt, 1, sz, stdin);
		if(tmp <= 0) {
			printf("400. Unable to read data: %s\n", strerror(errno));
			return false;
		}

		cnt += tmp;
	}
	
	fdp->data = malloc(max);
	if(fdp->data == NULL) {
		printf("400 Unable to allocate memory\n");
		return false;
	}

	memcpy(fdp->data, data, max);
	printf("200 Entry created\n");
	return true;
}


static bool get_data(struct filedata *fdp)
{
	long cnt, tmp;

	if(fdp->length < (1024 * 1024)) {
		return get_data_small(fdp);
	}

	fdp->mmap = true;

	fdp->data = mmap(NULL, fdp->length, PROT_READ|PROT_WRITE, MAP_PRIVATE|MAP_ANONYMOUS, -1, 0);
	if(fdp->data == MAP_FAILED) {
		printf("400 file too large\n");
		return true;
	}
	// printf("mmaping data\n");

	for(cnt = 0; cnt < fdp->length;) {
		tmp = fread(fdp->data + tmp, 1, fdp->length - tmp, stdin);
		if(tmp <= 0) {
			printf("400 unable to read data\n");
			return false;
		}
		cnt += tmp;
	}

	return true;
	
}

static bool upload_file(char *filename, long length)
{
	struct filedata *fdp;
		
	if(filename_exists(filename)) {
		printf("400 Filename already exists\n");
		return true;
	}


	if(length > (long)(1024 * 1024 * 8)) {
		printf("400 File size too large - %ld / %016x bytes.\n", length, length);
		return true;
	}

	fdp = calloc(sizeof(struct filedata), 1);
	if(! fdp) {
		errx(1, "calloc: can't allocate");
	}

	if(strlen(filename) >= FILENAMESIZE) {
		printf("400 File name too long\n");
		return false;
	}

	strncpy(fdp->filename, filename, strlen(filename));
	fdp->length = length;

	if(get_data(fdp) == false) {
		printf("400 Unable to get data :(\n");
		return false;
	}

	SLIST_INSERT_HEAD(&head, fdp, entries);
	return true;

}

static bool delete_file(char *filename)
{
	struct filedata *fdp;

	SLIST_FOREACH(fdp, &head, entries) {
		// i need previous entry :/ hmm.
		if(strcmp(fdp->filename, filename) == 0) {
			SLIST_REMOVE(&head, fdp, filedata, entries);
					
			if(fdp->mmap) {
				munmap(fdp->data, fdp->length);
			} else {
				free(fdp->data);
			}

			free(fdp);
			printf("200 Filename \"%s\" removed\n", filename);
			return true;
		}		
	}

	printf("400 Filename \"%s\" not found\n", filename);
	return true;
}

static bool download_file(char *filename)
{
	struct filedata *fdp;
	unsigned long cur, tmp;

	SLIST_FOREACH(fdp, &head, entries) {
		if(strcmp(fdp->filename, filename) == 0) break;
	}

	// printf("fdp is %p\n", fdp);

	if(!fdp) {
		printf("354 Can't download file - \"%s\" - no such file!\n", filename);
		return true;
	}

	printf("200 File download started. Prepare to get %ld bytes\n", fdp->length);
	
	for(cur = 0; cur < fdp->length;) {
		tmp = fwrite(fdp->data + cur, 1, fdp->length - cur, stdout);
		if(tmp <= 0) {
			printf("400 Can't write data: %s\n", strerror(errno));
			return false;
		}
		cur += tmp;	
	}
	
	printf("200 Data transferred!\n");
	return true;
}

/*
 * This section causes the fdp->length section to be overwritable, thus
 * modifying the "length" field, which then causes an info leak to be
 * possible.
 */

static bool rename_file(char *source, char *destination)
{
	struct filedata *fdp;

	SLIST_FOREACH(fdp, &head, entries) {
		if(strcmp(fdp->filename, source) == 0) {
			// Below is needed to avoid memcpy_chk and SSP.
			__builtin_memcpy(fdp->filename, destination, strlen(destination));

			printf("200 Filename renamed\n");
			return true;
		}
	}

	printf("400 File not found\n");
	return true;
} 

static bool truncate_file(char *source, long length)
{
	struct filedata *fdp;
	unsigned long newsz = length;

	SLIST_FOREACH(fdp, &head, entries) {
		if(strcmp(fdp->filename, source) == 0) {
			if(newsz >= fdp->length) {
				printf("400 New size must be smaller than existing size (%ld vs %ld)\n");
				return true;
			}

			fdp->length = length;
			printf("200 File resized correctly!\n");
			return true;
		}
	}

	printf("400 File not found!\n");
	return true;

}

static void list_files()
{
	struct filedata *fdp;


	printf("231. Files as follows\n");

	SLIST_FOREACH(fdp, &head, entries) {
		printf("232. \"%s\" - %ld bytes\n", fdp->filename, fdp->length);
	}

	printf("231 Done!\n");
}

static bool process_input()
{
	static char *linebuf, *p;
	const char *YYMARKER, *YYCURSOR, *id, *client; 

	if(linebuf == NULL) {
		linebuf = malloc(512);
		linebuf[511] = 0;
	}

	if(fgets(linebuf, 511, stdin) == NULL) return false;
	p = strchr(linebuf, '\n');
	if(p) *p = 0;
	p = strchr(linebuf, '\r');
	if(p) *p = 0;

	YYCURSOR = linebuf;

	const char *yyt1;const char *yyt2;

#line 292 "StrawClutcher.c"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy4;
	case 'G':
	case 'g':	goto yy5;
	case 'H':
	case 'h':	goto yy6;
	case 'L':
	case 'l':	goto yy7;
	case 'P':
	case 'p':	goto yy8;
	case 'R':
	case 'r':	goto yy9;
	case 'S':
	case 's':	goto yy10;
	case 'T':
	case 't':	goto yy11;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
#line 301 "StrawClutcher.re"
	{ printf("error.. cursor is %s, marker is %s, and ch is '%c'\n", YYCURSOR, YYMARKER, yych); return false; }
#line 320 "StrawClutcher.c"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy12;
	default:	goto yy3;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy14;
	default:	goto yy3;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy15;
	default:	goto yy3;
	}
yy7:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy16;
	case 'O':
	case 'o':	goto yy17;
	default:	goto yy3;
	}
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'U':
	case 'u':	goto yy18;
	default:	goto yy3;
	}
yy9:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy19;
	default:	goto yy3;
	}
yy10:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':
	case 'i':	goto yy20;
	case 'T':
	case 't':	goto yy21;
	default:	goto yy3;
	}
yy11:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'R':
	case 'r':	goto yy22;
	default:	goto yy3;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy23;
	default:	goto yy13;
	}
yy13:
	YYCURSOR = YYMARKER;
	goto yy3;
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy24;
	default:	goto yy13;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy25;
	default:	goto yy13;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':
	case 's':	goto yy26;
	default:	goto yy13;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':
	case 'g':	goto yy27;
	default:	goto yy13;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy28;
	default:	goto yy13;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy29;
	case 'T':
	case 't':	goto yy30;
	default:	goto yy13;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy31;
	default:	goto yy13;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy32;
	default:	goto yy13;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':
	case 'u':	goto yy33;
	default:	goto yy13;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy34;
	default:	goto yy13;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy35;
	default:	goto yy13;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':
	case 'p':	goto yy36;
	default:	goto yy13;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':
	case 't':	goto yy37;
	default:	goto yy13;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':
	case 'i':	goto yy39;
	default:	goto yy13;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy40;
	default:	goto yy13;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy41;
	default:	goto yy13;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy24;
	default:	goto yy13;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy42;
	default:	goto yy13;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy28;
	default:	goto yy13;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy43;
	default:	goto yy13;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy44;
	default:	goto yy13;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = YYCURSOR;
		goto yy45;
	default:	goto yy13;
	}
yy36:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy47;
	goto yy13;
yy37:
	++YYCURSOR;
#line 420 "StrawClutcher.re"
	{
		list_files();
		return true;
	}
#line 617 "StrawClutcher.c"
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy49;
	default:	goto yy13;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = YYCURSOR;
		goto yy50;
	default:	goto yy13;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':
	case 'm':	goto yy52;
	default:	goto yy13;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy53;
	default:	goto yy13;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':
	case 'c':	goto yy54;
	default:	goto yy13;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = YYCURSOR;
		goto yy55;
	default:	goto yy13;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy57;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy45;
	default:	goto yy13;
	}
yy47:
	++YYCURSOR;
#line 425 "StrawClutcher.re"
	{
		printf("200. Recognized commands\n200. LOGIN userID clientID - perform login\n200. HELP - this command\n200. SITE GLOB parameter - perform server side globbing\n200. LIST - lists files on server\n200 Done!");
		return true;
	}
#line 858 "StrawClutcher.c"
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy58;
	default:	goto yy13;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy59;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy50;
	default:	goto yy13;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy60;
	default:	goto yy13;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy61;
	case 'G':
	case 'g':	goto yy62;
	case 'I':
	case 'i':	goto yy63;
	default:	goto yy13;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy64;
	default:	goto yy13;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy65;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy55;
	default:	goto yy13;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy66;
	default:	goto yy13;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = YYCURSOR;
		goto yy67;
	default:	goto yy13;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
